--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "14.17"
+          node-version: '14.18'
       - name: Install dependencies
         run: npm ci
-      - name: Lint
-        run: npm run lint
       - name: Release
         run: npx semantic-release
         env:
