--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint --fix",
+    "lint:fix": "prettier --write **/*.{ts,tsx,js,jsx,json,yml,md} && eslint --fix",
     "semantic-release": "semantic-release"
   },
   "peerDependencies": {
@@ -34,7 +34,7 @@
     "typescript": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.4",
+    "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-react": "^7.14.5",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
