--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "semantic-release": "semantic-release"
   },
   "peerDependencies": {
+    "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "@types/node": "^16.7.13",
