--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,12 @@
 name: Test
 on: push
 jobs:
-  test:
-    name: Test
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
